# hermes-live-clipper

./: .gitignore  LICENSE  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
dashboard/: manifest.json  plugin_api.py
hermes_live_clipper/: __init__.py  analysis.py  analyzer.py  cleanup.py  cli.py  config.py  database.py  maintenance.py  models.py  plugin.py  rendering.py  resolvers.py  resources.py  service.py  transcription.py  worker.py
scripts/: com.techfren.live-clipper-v2.plist  install_macos.sh
tests/: conftest.py  test_analysis.py  test_analyzer.py  test_cleanup.py  test_config.py  test_dashboard_api.py  test_dashboard_bundle.py  test_database.py  test_maintenance.py  test_rendering.py  test_resolvers.py  test_resources.py  test_transcription.py
