[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hermes-live-clipper"
version = "0.1.0"
description = "Hermes plugin for clipping public YouTube and Twitch livestreams"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "psutil>=6,<8",
  "pydantic>=2.8,<3",
  "yt-dlp>=2025.6.30",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=9.0.3,<10", "pytest-asyncio>=1,<2", "ruff>=0.8,<1"]

[project.scripts]
hermes-live-clipper = "hermes_live_clipper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hermes_live_clipper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
